<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.socialparking.parking.parking.EntryScreen">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etUsername"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:hint="@string/entry_hint_user_name"
        android:gravity="center_horizontal"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etPassword"
        android:layout_below="@+id/etUsername"
        android:layout_centerHorizontal="true"
        android:hint = "@string/entry_hint_password"
        android:gravity="center_horizontal"
        android:layout_marginTop="57dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/etMail"
        android:layout_below="@+id/etPassword"
        android:hint = "@string/entry_hint_email"
        android:gravity="center_horizontal"
        android:layout_marginTop="46dp">
        <requestFocus/>
        </EditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button"
        android:id="@+id/bSignUp"
        android:layout_below="@id/etMail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="48dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in_button"
        android:id="@+id/bLogIn"
        android:layout_alignTop="@id/bSignUp"
        android:layout_alignRight="@id/etMail"
        android:layout_alignEnd="@id/etMail" />
</RelativeLayout>
